--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,17 +38,18 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // Provides ARCore Session and related resources.
-    implementation 'com.google.ar:core:1.15.0'
+    implementation 'com.google.ar:core:1.16.0'
     // Provides ArFragment, and other UX resources.
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.15.0'
     // Alternatively, use ArSceneView without the UX dependency.
     implementation 'com.google.ar.sceneform:core:1.15.0'
     implementation 'com.karumi:dexter:5.0.0'
+/*
+    apply plugin: 'com.google.ar.sceneform.plugin'
 
-    //apply plugin: 'com.google.ar.sceneform.plugin'
-
-   // sceneform.asset('sampledata/phone.fbx', // 'Source Asset Path' specified during import.
-   //         'default',                    // 'Material Path' specified during import.
-    //        'sampledata/phone.sfa', // '.sfa Output Path' specified during import.
-     //       'src/main/res/raw/phone')      // '.sfb Output Path' specified during import.
+    sceneform.asset('sampledata/ball.fbx', // 'Source Asset Path' specified during import.
+            'default',                    // 'Material Path' specified during import.
+           'sampledata/ball.sfa', // '.sfa Output Path' specified during import.
+          'src/main/res/raw/ball')      // '.sfb Output Path' specified during import.
+*/
 }
